Fixed misaligned search icon.
The magnifier icon for the search field has been fixed to display
properly in all browsers.

Ticket #1541

--- a/install/ui/ipa.css
+++ b/install/ui/ipa.css
@@ -635,7 +635,8 @@ div.tabs {
 }
 
 .search-filter a {
-    padding: 3px;
+    float: right;
+    margin: 0;
 }
 
 .search-controls {
